# Parsing_YADRO

./: CMakeLists.txt  README.md  build_my_project.sh
files/: file1.txt  file2.json
scripts/: plot.py  script.sh
src/: parser.cpp
